--- a/frontend/src/admin/admin.css
+++ b/frontend/src/admin/admin.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:#3D52A0;
+    background-color: #3D52A0;
     color: white;
 }
 
@@ -28,71 +28,96 @@
 .creation {
     display: flex;
     justify-content: space-around;
-    background-color: #7091e6;
+    /* background-color: #7091e6; */
     margin-top: 10px;
     padding: 20px;
     border-radius: 30px;
 }
 
+.image {
+    height: 10rem;
+    width: 10rem;
+    border: 2px solid rgb(3, 3, 66);
+    border-radius: 15px;
+}
+
+.creationButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid black; */
+}
+
+.creationButton button {
+    cursor: pointer;
+    margin-top: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 4px;
+    background-color: rgb(0, 229, 255);
+    color: rgb(3, 3, 66);
+    border: 1px solid rgb(3, 3, 66);
+}
+
+.hover {
+    width: fit-content;
+}
+
+.hover:hover {
+    transition: transform 0.5s ease;
+    transform: scale(1.1);
+
+    .creationButton button:active {
+        transform: translate(0em, 0.2em);
+    }
+    .creationButton button:hover {
+        color: rgb(0, 229, 255);
+        background-color: rgb(3, 3, 66);
+        border: 1px solid rgb(0, 229, 255);
+
+    }
+    
+}
+
+
+
 .candidate-creation {
 
     font-size: 17px;
-    padding: 0.5em 2em;
+    /* padding: 0.5em 2em; */
     border: transparent;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-    background: dodgerblue;
+    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
+    /* background: dodgerblue; */
     color: white;
     border-radius: 4px;
-}
-
-.candidate-creation:hover {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
-}
-
-.candidate-creation:active {
-    transform: translate(0em, 0.2em);
 }
 
 .election-cretion {
 
     font-size: 17px;
-    padding: 0.5em 2em;
+    /* padding: 0.5em 2em; */
     border: transparent;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-    background: dodgerblue;
+    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
+    /* background: dodgerblue; */
     color: white;
     border-radius: 4px;
 }
 
-.election-cretion:hover {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
-}
-
-.election-cretion:active {
-    transform: translate(0em, 0.2em);
-}
 
 .election-detail {
 
     font-size: 17px;
-    padding: 0.5em 2em;
+    /* padding: 0.5em 2em; */
     border: transparent;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-    background: dodgerblue;
+    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
+    /* background: dodgerblue; */
     color: white;
     border-radius: 4px;
 }
 
-.election-detail:hover {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
-}
 
-.election-detail:active {
-    transform: translate(0em, 0.2em);
-}
+
+
 
 .candidate-title {
     display: flex;
@@ -101,7 +126,7 @@
 }
 
 .create-candidate-container {
-    /* background-color: rgb(43, 156, 118); */
+    /* background-color: rgb(3, 3, 66); */
     border-radius: 30px;
 }
 
@@ -112,7 +137,7 @@
 }
 
 .profile {
-    border: 2px solid black;
+    border: 2px solid rgb(0, 229, 255);
     background-color: white;
     border-radius: 50%;
     height: 200px;
@@ -121,25 +146,24 @@
     margin-top: 30px;
 }
 
-.name-electionid-container {
-    /* padding: 50px; */
-}
-
 .name-electionid-container input {
     padding: 15px;
     margin: 10px;
     width: 250px;
+    border: 2px solid rgb(0, 229, 255);
     border-radius: 30px;
-    margin-right: 200px;
+    margin-right: 50px;
 }
-.election-name{
+
+.election-name {
     width: fit-content;
     border: 2px solid black;
     border-radius: 5px;
     margin-top: -5px;
     margin-left: 50px;
 }
-.election-name span{
+
+.election-name span {
     margin: 3px;
 }
 
@@ -152,15 +176,17 @@
 
 .create-candidate {
     /* margin-left: 80px; */
-    background-color: #7091e6;
+    background-color: rgba(3, 3, 66, 0.822);
     margin: 40px;
-    width: 80rem;
+    width: 50rem;
+    border: 2px solid rgb(3, 3, 66);
     height: fit-content;
-    box-shadow: 2px 2px 10px 5px;
+    /* box-shadow: 2px 2px 10px 5px; */
     border-radius: 20px;
 }
-.candidate-container{
-    background-color: #ede8f5;
+
+.candidate-container {
+    /* background-color: #ede8f5; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -179,20 +205,23 @@
 }
 
 .create-now {
+    cursor: pointer;
     margin-bottom: 10px;
     font-size: 17px;
     padding: 0.5em 2em;
-    border: 2px solid blue;
+    border: 1px solid white;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
-    background: dodgerblue;
+    background: rgb(3, 3, 66);
     color: white;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .create-now:hover {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
-}
+    transition: transform 1s ease;
+    transform: scale(1.1);
+    
+
+} 
 
 .create-now:active {
     transform: translate(0em, 0.2em);
