--- a/frontend/src/react files/admin page/admin.module.css
+++ b/frontend/src/react files/admin page/admin.module.css
@@ -1,12 +1,6 @@
 /* admin.module.css */
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #3D52A0;
-    color: white;
-}
+
 
 .header nav a {
     text-decoration: none;
@@ -190,11 +184,23 @@
     transform: translate(0em, 0.2em);
 }
 .header {
+    background-color: rgba(23, 21, 166, 0.274);
+    backdrop-filter: blur(10px);
+    height: 60px;
     display: flex;
-    justify-content: space-between;
+    /* position: fixed; */
     align-items: center;
-    background-color: #3D52A0;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 145px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 2px solid rgba(5, 0, 255, 0.296);
+}
+.websiteTitle{
+    margin-left: 20px;
     color: white;
+    font-size: x-large;
 }
 
 .a {
