--- a/frontend/src/react residue/all elections/allElections.module.css
+++ b/frontend/src/react residue/all elections/allElections.module.css
@@ -5,12 +5,25 @@
 }
 
 .header{
+    background-color: rgba(23, 21, 166, 0.274);
+    backdrop-filter: blur(10px);
+    height: 60px;
     display: flex;
-    justify-content: space-between;
+    /* position: fixed; */
     align-items: center;
-    background-color:#3D52A0;
-    color: white;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 145px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 2px solid rgba(5, 0, 255, 0.296);
 }
+.websiteTitle{
+    margin-left: 20px;
+    color: white;
+    font-size: x-large;
+}
+
 .websiteContent{
     margin-left: 30px;
     height: 50px;
@@ -39,8 +52,8 @@
 .electionsListContainer{
     margin-top: 20px;
     border-radius: 20px;
-    background-color: #ede8f5;
-    color: #092690;
+    background: radial-gradient(circle, rgb(3, 3, 66), #00FFFF);
+    color: white;
     height: fit-content;
     border: 2px solid rgb(3,3,66);
 }
@@ -74,6 +87,7 @@
     margin-top: 20px;
     font-size: x-large;
     margin-left: 25px;
+    font-weight: bold;
 }
 
 .electionBoxesContainer{
@@ -83,12 +97,15 @@
     justify-content: space-around;
 }
 .electionBoxContainer{
-    box-shadow: 2px 2px 25px 2px gray;
-    /* background-color: rgb(3,3,66); */
-    color: rgb(3,3,66);
-    border: 2px solid rgb(0, 229, 255);
+    /* color: rgb(3, 3, 66); */
     width: 30rem;
-    border-radius: 20px 20px 20px 20px;
+    background-color: rgba(255, 255, 255, 0.1); /* More transparency */
+    backdrop-filter: blur(15px);
+    border-radius: 20px;
+    position: relative;
+    border-top: 3px solid rgba(255, 255, 255, 0.14);
+    border-left: 5px solid rgba(255, 255, 255, 0.14);
+
 }
 .electionTitleContainer{
     margin-top: 5px;
@@ -102,6 +119,7 @@
     align-items: center;
     width: fit-content;
     font-size: larger;
+    color: white;
 }
 .candidateVsContainer{
     margin-top: 15px;
