--- a/frontend/src/react residue/cast vote/castVote.module.css
+++ b/frontend/src/react residue/cast vote/castVote.module.css
@@ -1,7 +1,21 @@
-.header {
-    background-color: rgb(44, 173, 130);
-    height: 50px;
-    border-radius: 30px;
+.header{
+    background-color: rgba(23, 21, 166, 0.274);
+    backdrop-filter: blur(10px);
+    height: 60px;
+    display: flex;
+    /* position: fixed; */
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 145px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 2px solid rgba(5, 0, 255, 0.296);
+}
+.websiteTitle{
+    margin-left: 20px;
+    color: white;
+    font-size: x-large;
 }
 
 .nav {
@@ -13,14 +27,6 @@
     font-weight: bold;
     margin-right: 40px;
     padding: 15px;
-}
-
-.banner {
-    background-color: rgb(43, 156, 118);
-    height: 300px;
-    border-radius: 30px;
-    margin-top: 10px;
-
 }
 
 .candidateBox {
@@ -56,7 +62,7 @@
 
 .createCandidateContainer {
     margin-top: 50px;
-    background-color: rgb(43, 156, 118);
+    background: linear-gradient( to bottom right, rgb(17, 10, 153), rgb(102, 0, 255), rgb(0, 204, 255), rgb(0, 255, 128));
     border-radius: 30px;
     width: fit-content;
 }
@@ -96,13 +102,20 @@
 }
 .createCandidate {
     margin: 30px;
-    box-shadow: 2px 2px 10px 5px;
+    /* box-shadow: 2px 2px 10px 5px; */
+    background-color: rgba(255, 255, 255, 0.152);
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.24);
+
     border-radius: 20px;
 }
 
 .bio {
     border-radius: 20px;
-    box-shadow: 2px 2px 10px 5px;
+    /* box-shadow: 2px 2px 10px 5px; */
+    background-color: rgba(255, 255, 255, 0.24);
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.24);
     display: flex;
     margin-top: 30px;
     margin-left: 50px;
@@ -151,9 +164,13 @@
 
 .elctionDescription {
     border-radius: 20px;
-    box-shadow: 2px 2px 10px 5px;
-    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.24);
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.24);
+
+    /* border: 2px solid black; */
     margin-left: 50px;
+    padding :20px;
     margin-right: 50px;
     margin-bottom: 20px;
 }
